--- a/templates/model.html
+++ b/templates/model.html
@@ -16,26 +16,30 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
                 crossorigin="anonymous"></script>
-        <div class="container-fluid">
-            <h1>{{ model.name }}</h1>
-            <div class="model-description">
-                {% for description in model.description %}
-                <p>{{ description }}</p>
-                {% endfor %}
-            </div>
-            <div class="model-tags">
-                {% for tag in model.tags %}
-                <a class="badge rounded-pill text-bg-primary">{{ tag }}</a>
-                {% endfor %}
-            </div>
-            <div class="row">
-                <div class="col">
-                    <h2>Input</h2>
-                    {% block input_section %}{% endblock %}
+        <div class="container pt-5">
+            <div class="container border-bottom">
+                <h1>{{ model.name }}</h1>
+                <div>
+                    {% for description in model.description %}
+                    <p>{{ description }}</p>
+                    {% endfor %}
                 </div>
-                <div class="col">
-                    <h2>Output</h2>
-                    {% block output_section %}{% endblock %}
+                <div class="pb-4">
+                    {% for tag in model.tags %}
+                    <a class="badge rounded-pill text-bg-primary">{{ tag }}</a>
+                    {% endfor %}
+                </div>
+            </div>
+            <div class="container py-4">
+                <div class="row row-cols-1 row-cols-md-2 g-4">
+                    <div class="col">
+                        <h2>Input</h2>
+                        {% block input_section %}{% endblock %}
+                    </div>
+                    <div class="col">
+                        <h2>Output</h2>
+                        {% block output_section %}{% endblock %}
+                    </div>
                 </div>
             </div>
         </div>
